war/style.css
/** Add css rules here for your application. */


/** Example rules used by the template application (remove for your app) */

h1 {
  font-size: 2em;
  font-weight: bold;
  color: #777777;
  margin: 40px 0px 70px;
  text-align: center;
}

.sendButton {
  display: block;
  font-size: 16pt;
}

/** Most GWT widgets already have a style name defined */
.gwt-DialogBox {
  width: 400px;
}

.dialogVPanel {
  margin: 5px;
}

.serverResponseLabelError {
  color: red;
}

/** Set ids using widget.getElement().setId("idOfElement") */
#closeButton {
  margin: 15px 6px 6px;
}

.boldText{
	font-weight: 500;
	padding-right: 20px;
}

.boldText2{
	font-weight: 600;
	padding-right: 5px;
}

.miscStyle{
	font-weight: 600;
	
}

.miscStyle2{
	padding-left: 5px;;
}

.titleStyle{	
	color: white;
	opacity: 1;	
	}

.boldNumbers{
	font-size: 2em;
	font-weight: 600;
	padding: 5px;
}

.leftPanel{
	/*width: 300px;
	height: 200px;*/
	float: left;
	position: relative;
	overflow: hidden;
}

.leftPic {
	width: 300px;
	height: 200px;
	float: left;
}

.leftText{
	width: 290px;
	height: 60px;
	padding: 5px;
	z-index: 9999;
	background-color: rgba(0,0,0,.6);
	color: #FFFFFF;
	font-size: 14px;
	font-weight: 600;
	position: absolute;
	top:130px;
	left:0px;
	text-align: center;
	target-new: tab;
}

.rightPanel {
	float: left;
	width: 200px;
	height: 200px;
	padding-left: 10px;
}

.itemContainer{
	/*width: 400px;*/
	height: 200px;
	margin-top: 50px;
	border-width:1px;
  	border-color: rgb(192,192,192);
  	border-style: solid;
}

ul li {
	list-style: none;
	padding-left: 5px;
}

.dirButton {
	margin-left: 50px;
	margin-bottom: 5px;
	padding-left: 50px;
	text-align: center;
}

.bizNameStyle {
	font-weight: 600;
	font-size: 1.25em;
}

a:link.bizNameStyle {
	color: #000000;
}


.subTitleStyle {
	color: #999999;	
}

.socialMedia{
	margin-top:40px;
	text-align: center;
	width: 300px;
}

.socialMedia table {
	margin: 0 auto;
}

.leftButton {
	z-index: 9999;
	position: absolute;
	top: 5px;	
	left: 5px;
}

.mapButton {
	
}

